As the z-index doesn't work as expected, a temp fix is to widen the gap in the css

--- a/src/components/StaticFilterOptions.css
+++ b/src/components/StaticFilterOptions.css
@@ -3,7 +3,6 @@
     margin-right: 20px; /* Add some spacing between filter containers */
     margin-left: 20px;
     margin-top: 20px;
-    z-index: 1;
   }
   
   .data-section {
@@ -14,6 +13,7 @@
   .filter-container {
     display: inline-block;
     margin-right: 20px;
+    margin-bottom: 150px; /* Add a bottom margin for spacing */
     vertical-align: top;
   }
   
@@ -49,7 +49,6 @@
     width: 100%;
     outline: none;
     cursor: pointer;
-    z-index: 2;
   }
   
   /* Style for the checkbox list */
@@ -63,9 +62,9 @@
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-height: 150px;
+    max-height: 150px; /* Set a maximum height for the checkbox list */
     overflow-y: auto;
-  }
+    }
   
   /* Style for checkbox items */
   .checkbox-list div {
